@@ -1,22 +1,3 @@
-/*
- * Copyright 2016-2020 the original author or authors from the JHipster project.
- *
- * This file is part of the JHipster project, see https://www.jhipster.tech/
- * for more information.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 package io.github.jhipster.config.apidoc;
 
 import io.github.jhipster.config.JHipsterProperties;
@@ -44,19 +25,11 @@ import springfox.documentation.service.Server;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.configuration.Swagger2DocumentationConfiguration;
-
 import java.nio.ByteBuffer;
 import java.util.*;
-
 import static io.github.jhipster.config.JHipsterConstants.SPRING_PROFILE_API_DOCS;
 import static springfox.documentation.builders.PathSelectors.regex;
 
-/**
- * Springfox OpenAPI configuration.
- * <p>
- * Warning! When having a lot of REST endpoints, Springfox can become a performance issue.
- * In that case, you can use the "no-api-docs" Spring profile, so that this bean is ignored.
- */
 @Configuration
 @ConditionalOnWebApplication
 @ConditionalOnClass({
@@ -74,31 +47,32 @@ import static springfox.documentation.builders.PathSelectors.regex;
 public class SpringfoxAutoConfiguration {
 
     static final String STARTING_MESSAGE = "Starting OpenAPI docs";
+
     static final String STARTED_MESSAGE = "Started OpenAPI docs in {} ms";
+
     static final String MANAGEMENT_TITLE_SUFFIX = "Management API";
+
     static final String MANAGEMENT_GROUP_NAME = "management";
+
     static final String MANAGEMENT_DESCRIPTION = "Management endpoints documentation";
 
     private final Logger log = LoggerFactory.getLogger(SpringfoxAutoConfiguration.class);
 
     private final JHipsterProperties.ApiDocs properties;
 
-    /**
-     * <p>Constructor for SpringfoxAutoConfiguration.</p>
-     *
-     * @param jHipsterProperties a {@link io.github.jhipster.config.JHipsterProperties} object.
-     */
     public SpringfoxAutoConfiguration(JHipsterProperties jHipsterProperties) {
         this.properties = jHipsterProperties.getApiDocs();
     }
 
-    /**
-     * Springfox configuration for the OpenAPI docs.
-     *
-     * @param springfoxCustomizers Springfox customizers
-     * @param alternateTypeRules alternate type rules
-     * @return the Springfox configuration
-     */
+    protected Docket createDocket() {
+        return new Docket(DocumentationType.OAS_30);
+    }
+
+    @Bean
+        public JHipsterSpringfoxCustomizer jHipsterSpringfoxCustomizer() {
+            return new JHipsterSpringfoxCustomizer(properties);
+        }
+
     @Bean
     @ConditionalOnMissingBean(name = "openAPISpringfoxApiDocket")
     public Docket openAPISpringfoxApiDocket(List<SpringfoxCustomizer> springfoxCustomizers,
@@ -121,23 +95,6 @@ public class SpringfoxAutoConfiguration {
         return docket;
     }
 
-    /**
-     * JHipster Springfox Customizer
-     *
-     * @return the Sringfox Customizer of JHipster
-     */
-    @Bean
-    public JHipsterSpringfoxCustomizer jHipsterSpringfoxCustomizer() {
-        return new JHipsterSpringfoxCustomizer(properties);
-    }
-
-    /**
-     * Springfox configuration for the management endpoints (actuator) OpenAPI docs.
-     *
-     * @param appName               the application name
-     * @param managementContextPath the path to access management endpoints
-     * @return the Springfox configuration
-     */
     @Bean
     @ConditionalOnClass(name = "org.springframework.boot.actuate.autoconfigure.web.server.ManagementServerProperties")
     @ConditionalOnProperty("management.endpoints.web.base-path")
@@ -169,7 +126,7 @@ public class SpringfoxAutoConfiguration {
             .useDefaultResponseMessages(properties.isUseDefaultResponseMessages())
             .groupName(MANAGEMENT_GROUP_NAME)
             .host(properties.getHost())
-            .protocols(new HashSet<>(Arrays.asList(properties.getProtocols())))
+            .protocols(new HashSet<>(List.of(properties.getProtocols())))
             .forCodeGeneration(true)
             .directModelSubstitute(ByteBuffer.class, String.class)
             .genericModelSubstitutes(ResponseEntity.class)
@@ -178,14 +135,4 @@ public class SpringfoxAutoConfiguration {
             .paths(regex(managementContextPath + ".*"))
             .build();
     }
-
-    /**
-     * <p>createDocket.</p>
-     *
-     * @return a {@link springfox.documentation.spring.web.plugins.Docket} object.
-     */
-    protected Docket createDocket() {
-        return new Docket(DocumentationType.OAS_30);
-    }
-
 }
